--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					</div>
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" uib-collapse="navCollapsed">
+					<div class="collapse" id="bs-example-navbar-collapse-1" uib-collapse="navCollapsed">
 						<ul class="nav navbar-nav">
 							<li class="active"><a href="#">Link 0<span class="sr-only">(current)</span></a></li>
 							<li><a href="#">Link 1</a></li>
