EOF commit hehe - if only we could use Bootstrap to conditionally assign navCollapsed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					</div>
 
 					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse" id="bs-example-navbar-collapse-1" uib-collapse="navCollapsed">
+					<div id="bs-example-navbar-collapse-1" uib-collapse="navCollapsed">
 						<ul class="nav navbar-nav">
 							<li class="active"><a href="#">Link 0<span class="sr-only">(current)</span></a></li>
 							<li><a href="#">Link 1</a></li>
@@ -56,12 +56,8 @@
 							<li><a href="#">Link 2</a></li>
 							<li class="dropdown" uib-dropdown>
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" uib-dropdown-toggle>Dropdown <span class="caret"></span></a>
-								<ul class="dropdown-menu" uib-dropdown-menu>
-									<li><a href="#">Action</a></li>
-									<li><a href="#">Another action</a></li>
-									<li><a href="#">Something else here</a></li>
-									<li role="separator" class="divider"></li>
-									<li><a href="#">Separated link</a></li>
+								<ul class="dropdown-menu" uib-dropdown-menu ng-repeat="page in pages">
+									<li><a href="{{ page.href }}">{{ page.name }}</a></li>
 								</ul>
 							</li>
 						</ul>
