De-stoopified ng-repeat

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 							<li><a href="#">Link 2</a></li>
 							<li class="dropdown" uib-dropdown>
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" uib-dropdown-toggle>Dropdown <span class="caret"></span></a>
-								<ul class="dropdown-menu" uib-dropdown-menu ng-repeat="page in pages">
-									<li><a href="{{ page.href }}">{{ page.name }}</a></li>
+								<ul class="dropdown-menu" uib-dropdown-menu>
+									<li ng-repeat="page in pages"><a href="{{ page.href }}">{{ page.name }}</a></li>
+
 								</ul>
 							</li>
 						</ul>
