Added a prototype for a directive for Bootstrap breakpoints

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 		<link href="angular-nav.css" rel="stylesheet" />
 
 		<script type="text/javascript" src="angular/app.js"></script>
+		<script type="text/javascript" src="angular/bootstrap-breakpoint.js"></script>
 		<script type="text/javascript" src="angular/nav-controller.js"></script>
 		<title>Angular Nav</title>
 	</head>
 	<body>
 		<header ng-controller="NavController">
+			<bootstrap-breakpoint></bootstrap-breakpoint>
 			<nav class="navbar navbar-default navbar-fixed-top navbar-inner">
 				<div class="container-fluid">
 					<!-- Brand and toggle get grouped for better mobile display -->
